fixed up navbar so it doesn't overlap main and made nav boxes clickable

--- a/main.css
+++ b/main.css
@@ -8,7 +8,7 @@ body {
     display: flex;
     justify-content: center;
     background-color: rgba(49, 49, 49, 0.7);
-    top: 0;
+    top: -20px;
     left: 0;   
     width: 100%;
     height: 50px;
@@ -44,17 +44,19 @@ body {
     top: 0;
     margin-left: -40px;
 }
-nav > ul > li {
+nav > ul > a > li {
     width: 20vw;
     padding:25px;
     border: 0.5px solid black;
     background-color: rgb(19, 163, 0);
+    text-align: center;
 }
-nav > ul > li:hover {
+nav > ul > a > li:hover {
     background-color: rgb(83, 233, 220);
     cursor: pointer;
 }
 .main {
+    
     height: 90vh;
     display: flex;
     flex-direction: column;
@@ -62,6 +64,8 @@ nav > ul > li:hover {
     align-items: center;
 }
 .info {
+    position: absolute;
+    top: 50px;
     width: 90%;
     height: 600px;
     background-color: rgba(21, 255, 0, 0.7);
